# realtime-python-api

./: .copier-answers.yml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGES.rst  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml  setup.cfg  versions.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
dev/: .coverage-tmp.html  404.html  index.html  sitemap.xml
dev/api/async/: index.html
dev/api/simple/: index.html
dev/changelog/: index.html
dev/contributing/: index.html
dev/cookbook/: index.html
dev/css/: material.css
dev/getting-started/: index.html
dev/guides/simple-vs-async-api/: index.html
dev/guides/under-the-hood/: index.html
dev/license/: index.html
dev/methods/: index.html
dev/methods/async/: index.html
dev/methods/async/connect-to-a-device/: index.html
dev/methods/async/others/: index.html
dev/methods/async/remote-control/: index.html
dev/methods/async/templates/: index.html
dev/methods/simple/: index.html
dev/methods/simple/connect-to-a-device/: index.html
dev/methods/simple/others/: index.html
dev/methods/simple/remote-control/: index.html
dev/methods/simple/templates/: index.html
dev/modules/: index.html
dev/search/: search_index.json
dev/troubleshooting/: index.html
docs/: api.rst  changelog.md  conf.py  cookbook.md  examples.rst  getting-started.md  index.md  index.rst  license.md  modules.md  troubleshooting.md
docs/api/: async.md  async.rst  base.md  base.rst  basic.rst  device.md  discovery.md  index.rst  models.md  models.rst  simple.md  simple.rst
docs/examples/: async.md  async.rst  basic.rst  index.md  index.rst  simple.md  simple.rst
docs/examples/async/: others.md  templates.md
docs/examples/async/streaming/: eye-events.md
docs/examples/simple/: connect-to-a-device.md  others.md  remote-control.md  streaming.md  templates.md
docs/examples/simple/streaming/: eye-cameras.md  eye-events.md  gaze.md  scene-camera.md
docs/guides/: getting-started.rst  index.rst  simple-vs-async-api.md  simple-vs-async-api.rst  under-the-hood.md  under-the-hood.rst
docs/methods/: async.md  index.md  simple.md
docs/methods/async/: connect-to-a-device.md  others.md  remote-control.md  templates.md
docs/methods/async/streaming/: eye-cameras.md  eye-events.md  gaze.md  imu-data.md  scene-camera.md
docs/methods/simple/: connect-to-a-device.md  others.md  remote-control.md  templates.md
docs/methods/simple/streaming/: eye-cameras.md  eye-events.md  gaze.md  imu-data.md  scene-camera.md
docs/overrides/hooks/: shortcodes.py
docs/overrides/partials/: logo.html
examples/: discover_devices.py  get_status.py  start_stop_recordings.py  stream_gaze.py  stream_scene_camera_video.py
examples/async/: clock_offset_estimate.py  device_camera_controls.py  device_status_get_current.py  device_status_update_via_callback.py  device_status_update_wait.py  device_time_offset.py  discover_devices.py  get_status_auto_update.py  get_status_single_request.py  send_event.py  start_stop_recordings.py  stream_eye_events.py  stream_eyes_camera_video.py  stream_gaze.py  stream_imu.py  stream_scene_camera_video.py  stream_video_with_overlayed_fixations.py  stream_video_with_overlayed_gaze.py  templates.py  visualize_clock_offsets.py
examples/basic/: discover_devices.py  get_status.py  send_event.py  start_stop_recordings.py  stream_gaze.py  stream_scene_camera_video.py  stream_video_with_overlayed_gaze.py
examples/simple/: camera_calibration.py  device_time_offset.py  discover_devices.py  get_status.py  send_event.py  start_stop_recordings.py  status_auto_update.py  stream_eye_events.py  stream_eyes_camera_video.py  stream_gaze.py  stream_imu.py  stream_scene_camera_video.py  stream_scene_eyes_and_gaze.py  stream_video_with_overlayed_gaze.py  templates.py
src/pupil_labs/realtime_api/: __init__.py  _utils.py  base.py  basic.py  camera_control.py  clock_echo.py  control.py  device.py  discovery.py  models.py  models_test.py  simple.py  time_echo.py
src/pupil_labs/realtime_api/simple/: __init__.py  _utils.py  device.py  (+2 more)
tests/: __init__.py  test_api.py  test_controls.py  test_template_model.py
v1.6.0/: .coverage-tmp.html  404.html  index.html  objects.inv  sitemap.xml
v1.6.0/api/async/: index.html
v1.6.0/api/simple/: index.html
v1.6.0/changelog/: index.html
v1.6.0/contributing/: index.html
v1.6.0/cookbook/: index.html
v1.6.0/getting-started/: index.html
v1.6.0/guides/simple-vs-async-api/: index.html
v1.6.0/guides/under-the-hood/: index.html
v1.6.0/license/: index.html
v1.6.0/methods/: index.html
v1.6.0/methods/async/: index.html
v1.6.0/methods/simple/: index.html
v1.6.0/modules/: index.html
v1.6.0/search/: search_index.json
v1.6.0/troubleshooting/: index.html
v1.6.1/: .coverage-tmp.html  404.html  index.html  sitemap.xml
v1.6.1/api/async/: index.html
v1.6.1/api/simple/: index.html
v1.6.1/changelog/: index.html
v1.6.1/contributing/: index.html
v1.6.1/cookbook/: index.html
v1.6.1/css/: mkdocstrings.css
v1.6.1/getting-started/: index.html
v1.6.1/guides/simple-vs-async-api/: index.html
v1.6.1/guides/under-the-hood/: index.html
v1.6.1/license/: index.html
v1.6.1/methods/: index.html
v1.6.1/methods/async/: index.html
v1.6.1/methods/simple/: index.html
v1.6.1/modules/: index.html
v1.6.1/troubleshooting/: index.html
v1.6.2/: .coverage-tmp.html  404.html  index.html  sitemap.xml
v1.6.2/api/async/: index.html
v1.6.2/api/simple/: index.html
v1.6.2/changelog/: index.html
v1.6.2/contributing/: index.html
v1.6.2/cookbook/: index.html
v1.6.2/css/: badges.css
v1.6.2/getting-started/: index.html
v1.6.2/guides/simple-vs-async-api/: index.html
v1.6.2/guides/under-the-hood/: index.html
v1.6.2/license/: index.html
v1.6.2/methods/: index.html
v1.6.2/methods/async/: index.html
v1.6.2/methods/simple/: index.html
v1.6.2/modules/: index.html
v1.6.2/search/: search_index.json
v1.6.2/troubleshooting/: index.html
(+73 files in other folders)
