[metadata]
name = pupil_labs_realtime_api
description = Python client for the Pupil Labs Realtime API
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/realtime-python-api
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation=https://pupil-labs-realtime-api.readthedocs.io/en/stable/
    History=https://pupil-labs-realtime-api.readthedocs.io/en/latest/history.html
    Network API Specification=https://github.com/pupil-labs/realtime-network-api

[options]
packages = find_namespace:
install_requires =
    aiohttp[speedups]
    aiortsp
    av
    nptyping<2  # TODO: Support nptyping>=2
    websockets
    zeroconf
    importlib-metadata;python_version<"3.8"
    typing-extensions;python_version<"3.8"
python_requires = >=3.7
include_package_data = true
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.extras_require]
docs =
    furo
    jaraco.packaging>=8.2
    rst.linker>=1.9
    sphinx<4.4
    importlib-metadata;python_version<"3.8"
opencv =
    opencv-python
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.0.1
    pytest-mypy
