[metadata]
name = pupil_labs_realtime_api
description = Python client for the Pupil Labs Realtime API
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/realtime-python-api
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation=https://pupil-labs-realtime-api.readthedocs.io/en/stable/
    History=https://pupil-labs-realtime-api.readthedocs.io/en/latest/history.html
    Network API Specification=https://github.com/pupil-labs/realtime-network-api

[options]
packages = find_namespace:
install_requires =
    aiohttp[speedups]
    aiortsp
    av
    beaupy
    numpy>=1.20
    pl-neon-recording>=0.1.4
    pydantic>=2
    websockets
    zeroconf
    importlib-metadata;python_version<"3.8"
    typing-extensions;python_version<"3.8"
python_requires = >=3.9
include_package_data = true
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.extras_require]
docs =
    furo
    jaraco.packaging>=9
    rst.linker>=1.9
    sphinx
    sphinx-toolbox
    importlib-metadata;python_version<"3.8"
examples =
    opencv-python
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.3
    pytest-mypy>=0.9.1;python_implementation != "PyPy"
